# led_clock

./: .gitignore
firmware/led_clock/: CMakeLists.txt  led_clock.c
hardware/pcb/: fp-lib-table  led_clock_board.kicad_pcb  led_clock_board.kicad_pro  led_clock_board.kicad_sch  sym-lib-table
hardware/pcb/LED Segments Libraries/: LED_segments.kicad_sym
hardware/pcb/LED Segments Libraries/LED_segments.pretty/: LED_segments_4_digits.kicad_mod
hardware/pcb/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
hardware/pcb/gerber/: led_clock_board-B_Cu.gbl  led_clock_board-B_Mask.gbs  led_clock_board-B_Paste.gbp  led_clock_board-B_Silkscreen.gbo  led_clock_board-Edge_Cuts.gm1  led_clock_board-F_Cu.gtl  led_clock_board-F_Mask.gts  led_clock_board-F_Paste.gtp  led_clock_board-F_Silkscreen.gto  led_clock_board-NPTH-drl_map.gbr  led_clock_board-NPTH.drl  led_clock_board-PTH-drl_map.gbr  led_clock_board-PTH.drl
